reduce width to avoid undesirable cropping, change margin to support

--- a/styles/_part-article.scss
+++ b/styles/_part-article.scss
@@ -327,8 +327,8 @@
           }
 
           h3 {
-            width: 130%;
-            margin: 41px 0 43px -15%;
+            width: 120%;
+            margin: 41px 0 43px -10%;
             font-family: 'Lora', serif;
             color: rgba($black, 0.95);
             font-size: 30px;
